--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "flatpickr": "^4.6.13",
     "html2canvas": "^1.4.1",
+    "html2pdf.js": "^0.9.0",
     "jspdf": "^2.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
